--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+* {
+  margin: 0;
+  padding: 0;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  [left="check-margin"] {
+  left: 85px !important;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
+.submenu-profile{
+  margin-bottom: 200px;
+}
+
+.submemnu-list {
+  margin-top: 50%;
+}
+.submenu {
+  width: 100%;
+  height: 20px;
+  text-align: left;
+  margin-bottom: 10px;
+  text-decoration: none;
+  background-color: white;
+  color: blue;
+  padding: 10px;
+}
+
+.small-tab {
+  margin-left: 10%;
+}
+
+.embedded-video{
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
 }
