--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,7 @@
   position: absolute;
   top:0;
   left:0;
-  margin-top: 2%;
-  margin-left: 10%;
+  margin-left: 5%;
   width: 85%;
   height: 95%;
 }
@@ -64,7 +63,8 @@
 }
 
 .course-list {
-  margin: 2%;
+  margin: 1%;
+  width: 100%;
 }
 
 .title-wrap {
@@ -73,20 +73,21 @@
 
 .course-box {
   color: #ffffff;
-  width: 35%;
+  width: 25%;
   background-color: #2d3b45;
   border-radius: 5px;
-  padding-top: 15%;
-  padding-bottom: 2%;
+  padding-top: 5%;
+  padding-bottom: 3%;
   text-align: center;
   font-style: italic bold;
   font-size: 30;
   margin: 0 36px 36px 0;
 }
 
-.courses-box-list {
-  width: 80%;
-  margin: 0 auto;
+.course-box-list {
+  float: left;
+  width: 60%;
+  margin-left: 3%;
   display: flex;
   flex-wrap: wrap;
 }
